2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt:
	* src/totem-menu.c (totem_action_add_recent):
	* src/totem-menu.h: Fix recent-menu not adding anything
	because it couldn't get a fast mime-type for the file,
	(Closes: #551360), also fix addition of streams to the
	list, otherwise nothing to go in the "Open Location"
	dialogue

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_mrls): Also allow the Fluendo MPEG
	demuxers recently moved to GStreamer main

2008-09-08  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-plugins-engine.c
	(totem_plugins_engine_activate_plugin): Don't ever disable
	an invisible plugin

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: remove obsolete variable

2008-09-02  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.schemas.in:
	* src/backend/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_open_with_subtitle):
	* src/plugins/publish/publish-plugin.ui:
	* src/plugins/pythonconsole/pythonconsole.py:
	* src/plugins/pythonconsole/pythonconsole.totem-plugin.in:
	* src/plugins/skipto/totem-skipto-plugin.c: (impl_activate): Convert
	British English words back to American English in the language strings
	and fix a few other small problems such as misplaced commas and
	spelling errors. (Closes: #548340)

2008-09-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Add support for
	the application/x-ms-wmp mime-type (Closes: #550157)

2008-09-01  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/mythtv/totem-mythtv.c (create_treeview),
	(totem_mythtv_list_recordings), (sort_channels),
	(totem_mythtv_list_livetv), (device_found_cb),
	(totem_mythtv_update_binfo), (refresh_cb),
	(totem_mythtv_plugin_finalize), (add_sidebar), (impl_activate),
	(impl_deactivate): Add support for playing back live TV using
	gmyth, and streaming from MythTV (Closes: #549893)
