@@ -1,3 +1,11 @@
+2008-09-10  Bastien Nocera  <hadess@hadess.net>
+
+	* data/totem.schemas.in: Add schemas for the visuals
+	quality and connection speed settings, patch from
+	Eric Piel <e.a.b.piel@tudelft.nl> (Closes: #535505)
+	* src/backend/bacon-video-widget.h: Force the first item
+	of the visuals quality enum to be 0
+
 2008-09-09  Bastien Nocera  <hadess@hadess.net>
 
 	* data/mime-type-list.txt:
